<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_title"/>

    <EditText
        android:id="@+id/thoughts_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_thoughts"/>

    <Button
        android:id="@+id/save_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text"/>

    <Button
        android:id="@+id/show_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_text"/>

    <Button
        android:id="@+id/update_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>

    <Button
        android:id="@+id/delete_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/thoughtText"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

</LinearLayout>

